fix: update text color for improved readability in About Me section and add light gray color variable in global styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,6 +54,7 @@ body {
     --color-my-dark-blue: #0550DF;
     --color-my-dark-gray: #303030;
     --color-my-light-blue: #0CC0DF;
+    --color-my-light-gray: #B5B7BB;
 
     --shadow-light: 0 0 50px #E5E7EB55;
     --shadow-light-sm: 0 0 10px #E5E7EB55;
